update paths for elvira

--- a/lib/Elvira/resources/elvira.config
+++ b/lib/Elvira/resources/elvira.config
@@ -17,9 +17,9 @@ fastq.deconvolve.worker.exe.path /usr/local/devel/VIRIFX/software/Deployment/elv
 
 detect_abacus_worker	/usr/local/devel/VIRIFX/software/Deployment/elvira-1.5-563ce19b-20190313-1040/bin/workers/detectAbacusErrorsInAce
 re_abacus_worker		/usr/local/devel/VIRIFX/software/Deployment/elvira-1.5-563ce19b-20190313-1040/bin/workers/reAbacusAceContig
-muscle					/usr/local/bin/muscle
-blast					/usr/local/bin/blastall
-mafft					/usr/local/bin/mafft
+muscle					/opt/patric-common/runtime/bin/muscle
+blast				/opt/patric-common/runtime/bin/blastall	
+mafft					/opt/patric-common/runtime/bin/mafft
 
 rtv.type.blastDb		rtv/rotaC_db_v15.1_VIGOR_CALLED_ORFS_ONLY/RotaC_ReferenceDb_v15.1_14_NOV_2013.fixed.2.VIGOR_ORF_ONLY.fasta
 rtv.type.refOrfFastaPath		rtv/rotaC_db_v15.1_VIGOR_CALLED_ORFS_ONLY/ref.orfOnly.fasta
